css/style.css
h1 {
  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
  color: aquamarine;
  text-align: center;
  text-decoration: aqua;
  font-size: x-large;
  text-decoration: underline;
  font-style: italic;
}
h2 {
  font-family: "Times New Roman", Times, serif;
  color: aquamarine;
  font-size: medium;
  text-decoration: aqua;
  font-style: italic;text-align: center;
}
p {
  font-family: Arial, Helvetica, sans-serif;
  color: lawngreen;
  font-style: italic;
  text-align: center;
}
div{
    text-align: ;
}
li{
    text-align: center;color: lime;
}
img{
    align-items: center;
}
ol{
    text-align: center;
}

